Subidos recursos, realizadas variables, realizado el header en mobile version

--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejemplos responsive con Sass</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio Adam Keyes</title>
   </head>
   <body>
-    <h1>Ejemplos Responsive</h1>
-    <h2>hola</h2>
-    <p>hola</p>
+    <div class="container">
+      <header class="header_principal">
+        <a href="index.html" class="header_principal__logo"
+          ><img src="/img/logo-adam.svg" alt="Logotipo de Adam Keyes"
+        /></a>
+        <nav class="header_principal__icons">
+          <a href="#"><img src="/img/icon-github.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-shape.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-linkedin.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-twitter.svg" alt= /></a>
+       
+      </header>
+      
+    </div>
 
     <script type="module" src="/src/main.js"></script>
   </body>
