Realizando Hero en mobile version

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
           <a href="#"><img src="/img/icon-twitter.svg" alt= /></a>
        
       </header>
+      <section class="hero">
+        <img class="hero__image" src="img/img-adam-mobile.png" alt="Imagen Adam">
+        <h1 class="hero__title">Nice to meet you! I’m Adam Keyes.</h1>
+        <p class="hero__subtitle">Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
+      </section>
       
     </div>
 
