Realizado hero,tecnologies y projects en version mobile

--- a/index.html
+++ b/index.html
@@ -27,8 +27,121 @@
       </header>
       <section class="hero">
         <img class="hero__image" src="img/img-adam-mobile.png" alt="Imagen Adam">
-        <h1 class="hero__title">Nice to meet you! I’m Adam Keyes.</h1>
+        <h1 class="hero__title">Nice to meet you! I’m <span>Adam Keyes</span>.</h1>
         <p class="hero__subtitle">Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
+        <p class="hero__button"><a class="button" href="#">Contact me</a></p>
+      </section>
+      <div class="separation">
+              </div>
+      <section class="tecnologies">
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">HTML</h2>
+          <p class="tecnologies__item__subtitle">4 Years Experience</p>
+        </div>
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">CSS</h2>
+          <p class="tecnologies__item__subtitle">4 Years Experience</p>
+        </div>
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">Javascript</h2>
+          <p class="tecnologies__item__subtitle">4 Years Experience</p>
+        </div>
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">Accessibility</h2>
+          <p class="tecnologies__item__subtitle">4 Years Experience</p>
+        </div>
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">React</h2>
+          <p class="tecnologies__item__subtitle">3 Years Experience</p>
+        </div>
+        <div class="tecnologies__item">
+          <h2 class="tecnologies__item__title">Sass</h2>
+          <p class="tecnologies__item__subtitle">3 Years Experience</p>
+        </div>
+      </section>
+      <div class="separation">
+              </div>
+
+      <section class="projects">
+        <header class="projects__header">
+          <h2 class="projects__header__title">Projects</h2>
+          <a href="#" class="button">Contact Me</a>
+        </header>
+        <article class="projects__article">
+          <img src="img/img-portfolio.jpg" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">DESIGN PORTFOLIO</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
+        <article class="projects__article">
+          <img src="img/img-elearning.png" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">E-learning Landing Page</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
+        <article class="projects__article">
+          <img src="img/img-todoweb.png" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">Todo Web app</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+            <p>Javascript</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
+        <article class="projects__article">
+          <img src="img/img-entertainment.png" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">Entertainment Web App</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+            <p>Javascript</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
+        <article class="projects__article">
+          <img src="img/img-memorygame.png" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">Memory Game</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
+        <article class="projects__article">
+          <img src="img/img-art-gallery.png" alt="" class="projects__article__img">
+          <h2 class="projects__article__title">Art Gallery ShowCase</h2>
+          <div class="projects__article__tecnologies">
+            <p>Html</p>
+            <p>Css</p>
+            <p>Javascript</p>
+          </div>
+          <div class="projects__article__buttons">
+            <a href="#" class="button">View Project</a>
+            <a href="#" class="button">View Code</a>
+          </div>
+        </article>
       </section>
       
     </div>
