--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="container">
+      <img class="spiral" src="img/img-oval.png" alt="">
       <header class="header_principal">
         <a href="index.html" class="header_principal__logo"
           ><img src="/img/logo-adam.svg" alt="Logotipo de Adam Keyes"
@@ -61,8 +62,11 @@
       </section>
       <div class="separation">
               </div>
+            
+
 
       <section class="projects">
+        <img class="spiral-projects" src="img/img-oval-left.png" alt="">
         <header class="projects__header">
           <h2 class="projects__header__title">Projects</h2>
           <a href="#" class="button">Contact Me</a>
@@ -143,6 +147,37 @@
           </div>
         </article>
       </section>
+      <section class="contact">
+                <img class="spiral-contact" src="img/img-oval.png" alt="">
+
+        <h2 class="contact__title">Contact</h2>
+        <p class="contact__subtitle">I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
+        <form class="contact__form" action="#">
+          <div class="contact__form__name">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="NAME" required></div>
+          <div class="contact__form__email">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="EMAIL" required></div>
+          <div class="contact__form__textarea">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" placeholder="MESSAGE" rows="5" required></textarea>
+
+          </div>
+          <button class="button" type="submit" >Send Message</button></form>
+      </section>
+      <div class="separation">
+              </div>
+      <footer class="footer">
+         <a href="index.html" class="footer__logo"
+          ><img src="/img/logo-adam.svg" alt="Logotipo de Adam Keyes"
+        /></a>
+        <nav class="footer__icons">
+          <a href="#"><img src="/img/icon-github.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-shape.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-linkedin.svg" alt= /></a>
+          <a href="#"><img src="/img/icon-twitter.svg" alt= /></a>
+      </footer>
       
     </div>
 
