Finalizado el proyecto responsive en todos los modos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="projects__content">
           <article class="projects__article">
-          <img src="img/img-portfolio.jpg" alt="" class="projects__article__img">
+          <img src="img/img-portfolio.png" alt="" class="projects__article__img">
           <h2 class="projects__article__title">DESIGN PORTFOLIO</h2>
           <div class="projects__article__tecnologies">
             <p>Html</p>
@@ -156,9 +156,11 @@
       <section class="contact">
                 <img class="spiral-contact" src="img/img-oval.png" alt="">
 
-        <h2 class="contact__title">Contact</h2>
-        <p class="contact__subtitle">I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p>
-        <form class="contact__form" action="#">
+        <div>
+          <h2 class="contact__title">Contact</h2>
+          <p class="contact__subtitle">I would love to hear about your project and how I could help. Please fill in the form, and I’ll get back to you as soon as possible.</p></div>
+        <div>
+          <form class="contact__form" action="#">
           <div class="contact__form__name">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="NAME" required></div>
@@ -171,6 +173,7 @@
 
           </div>
           <button class="button" type="submit" >Send Message</button></form>
+        </div>
       </section>
       <div class="separation">
               </div>
